--- a/iss_tracker/package.json
+++ b/iss_tracker/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "particles.js": "^2.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.2"
+    "react-router-dom": "^6.26.2",
+    "react-tsparticles": "^2.9.3",
+    "tsparticles": "^2.9.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
