--- a/iss_tracker/package.json
+++ b/iss_tracker/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@googlemaps/js-api-loader": "^1.16.8",
     "@mui/material": "^6.1.1",
     "@tanstack/react-query": "^5.56.2",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "dotenv": "^16.4.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2"
