--- a/iss_tracker/package.json
+++ b/iss_tracker/package.json
@@ -14,9 +14,11 @@
     "@emotion/styled": "^11.13.0",
     "@googlemaps/js-api-loader": "^1.16.8",
     "@mui/material": "^6.1.1",
+    "@mui/x-date-pickers": "^7.18.0",
     "@tanstack/react-query": "^5.56.2",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
